<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgournd_light_blue"
    tools:context=".view.DetailActivity">

    <ImageView
        android:id="@+id/im_detail_url"
        android:layout_width="@dimen/default_image_300"
        android:layout_height="@dimen/default_image_300"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:elevation="@dimen/default_elevation_2"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/EquipmentDetailName"
        android:layout_width="@dimen/default_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:gravity="center"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_detail_url" />

    <TextView
        android:id="@+id/tv_detail_price"
        style="@style/EquipmentDetailPrice"
        android:layout_width="@dimen/default_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:hint="@string/price_default"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />



    <FrameLayout
        android:id="@+id/fl_detail_border"
        android:layout_width="@dimen/default_zero"
        android:layout_height="@dimen/default_zero"
        android:layout_margin="@dimen/default_margin_16"
        android:background="@drawable/title_border"
        app:layout_constraintBottom_toTopOf="@+id/btn_detail_go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_price">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin_16">

            <TextView
                style="@style/EquipmentDetailDescription"
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/default_elevation_2"
                android:hint="@string/description"
                />

        </ScrollView>

    </FrameLayout>

    <Button
        android:id="@+id/btn_detail_go_back"
        style="@style/Buttons"
        android:layout_width="@dimen/default_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:layout_marginBottom="@dimen/default_margin_16"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>